feat: improve docs and tests
